# back/storage/api-docs/api-docs.json
@@ -120,6 +120,35 @@
             }
         },
         "/api/empleado": {
+            "get": {
+                "tags": [
+                    "EmpleadoController"
+                ],
+                "summary": "Muestra todos los empleados",
+                "operationId": "empleadoIndex",
+                "responses": {
+                    "200": {
+                        "description": "Empleados",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "400": {
+                        "description": "Solicitud no válida"
+                    },
+                    "404": {
+                        "description": "No encontrado"
+                    },
+                    "422": {
+                        "description": "Error validación"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
             "put": {
                 "tags": [
                     "EmpleadoController"
